--- a/筛选.md
+++ b/筛选.md
@@ -1,3 +1,3 @@
-将所有区域选中-----数据-----高级------列表区域输入“$C$2:$D$36”-----条件区域输入“$O$2:$P$4”-----确定，完成
+将所有区域选中-----数据-----高级-----在$O$2和$P$4都输入“>80”-列表区域输入“$C$2:$D$36”-----条件区域输入“$O$2:$P$4”-----确定，完成
 
 如果要复制到一定的区域，点击高级之后点击“将筛选结果复制到其他位置”，“复制到”填写区域范围，即可。
